# xorshift-random

./: README.md  xorshift-random.cabal
src/System/Random/Xorshift/: Word32.hs
