cabal-version:      2.2
category:           Random, Vector
build-type:         Simple

name:               xorshift-random
synopsis:           Library for generating random numbers using xorshift algorithms
version:            0.1.0

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
homepage:           https://github.com/Boarders/xorshift-random
bug-reports:        https://github.com/Boarders/xorshift-random/issues
copyright:          2019
license:            BSD-3-Clause
description:
    .
    TODO
    .
    @

extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Boarders/xorshift-random


Library

  hs-source-dirs:   src

  ghc-options:      -Wall

  build-depends:    base        ^>= 4.12.0.0
                  , primitive   >= 0.6.4.0  && < 0.7
                  , vector      >= 0.12.0   && < 0.13

  exposed-modules:  System.Random.Xorshift.Word32
                    

  other-modules:

  default-language: Haskell2010


Test-Suite testsuite

  type:             exitcode-stdio-1.0

  main-is:          Test.hs

  hs-source-dirs:   test

  ghc-options:      -Wall
                    -Wincomplete-patterns

  build-depends:    perfect-vector-shuffle ^>= 0.1.0
                  , base                   ^>= 4.12.0.0
                  , QuickCheck             ^>= 2.12.6.1
                  , random                 ^>= 1.1
                  , tasty                  >= 1.2    && < 1.3
                  , tasty-quickcheck       ^>= 0.10
                  , vector                 >= 0.12.0 && < 0.13
                  , quickcheck-instances   >= 0.3.19 && < 0.4


  other-modules:
                    Xorshift.Test

  default-language: Haskell2010